<resources>
    <string name="app_name">PechaKucha</string>
    <string name="app_full_name">PechaKucha Timer</string>

    <string name="start">Start</string>
    <string name="restart">Restart</string>

    <string name="period_length">Period Length</string>
    <string name="number_periods">Number of periods</string>

    <string name="default_period" translatable="false">20</string>
    <string name="default_number_periods" translatable="false">20</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="info_dialog_title">Info</string>
    <string name="version_label">Version</string>
    <string name="done">Done</string>
    <string name="created_by">Created by</string>
    <string name="website">http://shreyaschand.com</string>
</resources>
